--- a/stable_cascade_gradio_jupyter.ipynb
+++ b/stable_cascade_gradio_jupyter.ipynb
@@ -19,10 +19,10 @@
       "source": [
         "%cd /content\n",
         "!git clone -b dev https://github.com/camenduru/stable-cascade-hf\n",
-        "%cd /content/stable-cascadeM-hf\n",
+        "%cd /content/stable-cascade-hf\n",
         "\n",
         "!pip install -q git+https://github.com/kashif/diffusers.git@diffusers-yield-callback\n",
-        "!pip install -q accelerate\n",
+        "!pip install -q gradio accelerate\n",
         "\n",
         "!python app.py"
       ]
