--- a/stable_cascade_gradio_jupyter.ipynb
+++ b/stable_cascade_gradio_jupyter.ipynb
@@ -21,6 +21,9 @@
         "!git clone -b dev https://github.com/camenduru/stable-cascade-hf\n",
         "%cd /content/stable-cascade-hf\n",
         "\n",
+        "!wget https://huggingface.co/spaces/multimodalart/stable-cascade/resolve/main/previewer/previewer_v1_100k.pt -O /content/stable-cascade-hf/previewer/previewer_v1_100k.pt\n",
+        "!wget https://huggingface.co/spaces/multimodalart/stable-cascade/resolve/main/previewer/text2img_wurstchen_b_v1_previewer_100k.pt -O /content/stable-cascade-hf/previewer/text2img_wurstchen_b_v1_previewer_100k.pt\n",
+        "\n",
         "!pip install -q git+https://github.com/kashif/diffusers.git@diffusers-yield-callback\n",
         "!pip install -q gradio accelerate\n",
         "\n",
