--- a/stable_cascade_gradio_jupyter.ipynb
+++ b/stable_cascade_gradio_jupyter.ipynb
@@ -103,7 +103,7 @@
         "    # decoder_timesteps: List[float] = None,\n",
         "    decoder_guidance_scale: float = 0.0,\n",
         "    num_images_per_prompt: int = 2,\n",
-        "    profile: gr.OAuthProfile | None = None,\n",
+        "    # profile: gr.OAuthProfile | None = None,\n",
         ") -> PIL.Image.Image:\n",
         "    previewer.eval().requires_grad_(False).to(device).to(dtype)\n",
         "    prior_pipeline.to(device)\n",
