--- a/stable_cascade_gradio_jupyter.ipynb
+++ b/stable_cascade_gradio_jupyter.ipynb
@@ -34,6 +34,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "%cd /content/stable-cascade-hf\n",
+        "\n",
         "import os\n",
         "import random\n",
         "import numpy as np\n",
@@ -287,13 +289,13 @@
         "        outputs=result,\n",
         "        api_name=\"run\",\n",
         "    )\n",
-        "    \n",
-        "# with gr.Blocks(css=\"style.css\") as demo_with_history:\n",
-        "#     with gr.Tab(\"App\"):\n",
-        "#         demo.render()\n",
         "\n",
-        "if __name__ == \"__main__\":\n",
-        "    demo.queue().launch(share=True)"
+        "from pyngrok import ngrok, conf\n",
+        "conf.get_default().auth_token = 'NGROK_TOKEN_HERE'\n",
+        "public_url = ngrok.connect(7861).public_url\n",
+        "print(public_url)\n",
+        "    \n",
+        "demo.queue().launch(server_port=7861, inline=False, share=False, debug=True)"
       ]
     }
   ],
